# shared-autonomy-for-teleoperating-baxter-robot

./: Dockerfile  README.md  aruco.py  calibration.py  print_markers.py  test.py
baxter robot teleoperation functions/: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  baxter.sh
baxter robot teleoperation functions/build_isolated/: catkin_make_isolated.cache
baxter robot teleoperation functions/build_isolated/baxter_common/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_core_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_examples/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
baxter robot teleoperation functions/build_isolated/baxter_gazebo/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_interface/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
baxter robot teleoperation functions/build_isolated/baxter_maintenance_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_pykdl/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_sdk/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_sim_controllers/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_sim_hardware/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_sim_io/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  qrc_sim_io.cpp
baxter robot teleoperation functions/build_isolated/baxter_sim_kinematics/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_simulator/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/baxter_tools/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/cups/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/dynamixel_controllers/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/build_isolated/dynamixel_driver/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
baxter robot teleoperation functions/src/: simple_grasp.py
baxter robot teleoperation functions/src/ebolabot/ebolabot_bringup/: CMakeLists.txt  README.md  package.xml
baxter robot teleoperation functions/src/ebolabot/ebolabot_bringup/launch/: base.launch  hands.launch  trina.launch  vision.launch
baxter robot teleoperation functions/src/ebolabot/ebolabot_bringup/launch/hstar_amp/: drivers.launch
baxter robot teleoperation functions/src/ebolabot/ebolabot_bringup/launch/kinect2_bridge/: kinect2_hw.launch  kinect2_points.launch
baxter robot teleoperation functions/src/ebolabot/ebolabot_bringup/launch/reflex/: reflex_bilateral.launch  reflex_calibrate_bilateral.launch
baxter robot teleoperation functions/src/ebolabot/ebolabot_bringup/launch/vicon_bridge/: vicon.launch
baxter robot teleoperation functions/src/ebolabot/ebolabot_description/: CMakeLists.txt  README.md  package.xml
baxter robot teleoperation functions/src/ebolabot/ebolabot_description/launch/: description.launch  view_model.launch
baxter robot teleoperation functions/src/ebolabot/ebolabot_description/robots/: ebolabot.urdf.xacro
baxter robot teleoperation functions/src/ebolabot/ebolabot_description/rviz/: ebolabot.rviz
baxter robot teleoperation functions/src/ebolabot/ebolabot_description/urdf/: kinect2.urdf.xacro  stand.urdf.xacro
baxter robot teleoperation functions/src/ebolabot/ebolabot_docs/: CMakeLists.txt  package.xml
baxter robot teleoperation functions/src/ebolabot/ebolabot_hstar_amp/: CMakeLists.txt  README.md  amp_rules.sh  amp_service.sh  package.xml
baxter robot teleoperation functions/src/ebolabot/ebolabot_hstar_amp/amp_bringup/: amp.bash  amp.service
baxter robot teleoperation functions/src/ebolabot/ebolabot_hstar_amp/launch/: drivers.launch
baxter robot teleoperation functions/src/ebolabot/ebolabot_hstar_amp/udev/: 75-amp.rules
baxter robot teleoperation functions/src/ebolabot/ebolabot_system_configuration/: CMakeLists.txt  README.md  package.xml
baxter robot teleoperation functions/src/ebolabot/ebolabot_system_configuration/scripts/: baxter.sh  put_rules.sh  reflex_calibrate_service.sh
baxter robot teleoperation functions/src/ebolabot/ebolabot_system_configuration/udev/: 40-ttyacm.rules  50-ttyusb.rules  557-primesense-usb.rules  72-logitech_wheel.rules  90-kinect2.rules  95-hokuyo.rules  99-reflex-sf.rules
baxter robot teleoperation functions/src/ebolabot/ebolabot_system_configuration/usb/: 046d_c261
baxter robot teleoperation functions/src/ebolabot/ebolabot_system_configuration/yaml/reflex/: left_hand.yaml  left_hand_zero_points.yaml  right_hand.yaml  right_hand_zero_points.yaml
markers/: 4 tags.odp  4 tags.pptx
(+504 files in other folders)
