<?xml version="1.0"?>
<package>
  <name>ebolabot_hstar_amp</name>
  <version>0.5.0</version>
  <description>Updated hstar_amp launch script for ebolabot</description>


  <author email="oakyildiz@wpi.edu">Ozan Akyildiz</author>
  <maintainer email="oakyildiz@wpi.edu">Ozan Akyildiz</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>hstar_amp</run_depend>

  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
